--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,9 +3,12 @@ cmake_minimum_required(VERSION 3.0)
 # set the project name
 project(arduino-audio-tools)
 
+include(FetchContent)
+
 add_library(arduino-audio-tools INTERFACE)
 
-option(BUILD_TESTS "Build all tests automatically" OFF)
+#option(BUILD_TESTS "Build all tests automatically" OFF)
+option(ADD_STD_LIB "Add Standard Desktop Libraries" ON)
 
 
 # make include directory available to calling projects 
@@ -18,8 +21,22 @@ install(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/src/" # source directory
     PATTERN "*.h" # select header files
 )
 
-if (BUILD_TESTS)
-    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/tests)
-else()
-    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/tests EXCLUDE_FROM_ALL)
+# Add basic libraries necessary for desktop build
+if (ADD_STD_LIB)
+
+    FetchContent_Declare(portaudio GIT_REPOSITORY "https://github.com/PortAudio/portaudio.git" GIT_TAG v19.7.0 )
+    FetchContent_GetProperties(portaudio)
+    if(NOT portaudio_POPULATED)
+        FetchContent_Populate(portaudio)
+        add_subdirectory(${portaudio_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR}/portaudio)
+    endif()
+
+    # Build with Linux Arduino Emulator
+    FetchContent_Declare(arduino_emulator GIT_REPOSITORY "https://github.com/pschatzmann/Arduino-Emulator.git" GIT_TAG main )
+    FetchContent_GetProperties(arduino_emulator)
+    if(NOT arduino_emulator_POPULATED)
+        FetchContent_Populate(arduino_emulator)
+        add_subdirectory(${arduino_emulator_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR}/emulator)
+    endif()
+
 endif()
