--- a/tests/url-test/CMakeLists.txt
+++ b/tests/url-test/CMakeLists.txt
@@ -11,6 +11,11 @@ endif()
 
 include(FetchContent)
 
+# Build with arduino-audio-tools
+if(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
+    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../.. ${CMAKE_CURRENT_BINARY_DIR}/arduino-audio-tools )
+endif()
+
 # build sketch as executable
 add_executable (url-test url-test.cpp ../main.cpp)
 # set preprocessor defines
