--- a/tests/codec/aac-fdk/CMakeLists.txt
+++ b/tests/codec/aac-fdk/CMakeLists.txt
@@ -10,6 +10,11 @@ if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
 endif()
 include(FetchContent)
 
+# Build with arduino-audio-tools
+if(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
+    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../../.. ${CMAKE_CURRENT_BINARY_DIR}/arduino-audio-tools )
+endif()
+
 # Build with arduino-fdk-aac
 FetchContent_Declare(fdk_aac GIT_REPOSITORY "https://github.com/pschatzmann/arduino-fdk-aac.git" GIT_TAG main )
 FetchContent_GetProperties(fdk_aac)
@@ -19,7 +24,7 @@ if(NOT fdk_aac_POPULATED)
 endif()
 
 # build sketch as executable
-add_executable (aac-fdk aac-fdk.cpp ../main.cpp)
+add_executable (aac-fdk aac-fdk.cpp ../../main.cpp)
 
 # set preprocessor defines
 target_compile_definitions(aac-fdk PUBLIC -DARDUINO -DEXIT_ON_STOP -DUSE_FDK -DUSE_PORTAUDIO -DIS_DESKTOP)
