--- a/tests/codec/mp3-helix/CMakeLists.txt
+++ b/tests/codec/mp3-helix/CMakeLists.txt
@@ -11,6 +11,11 @@ endif()
 
 include(FetchContent)
 
+# Build with arduino-audio-tools
+if(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
+    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../../.. ${CMAKE_CURRENT_BINARY_DIR}/arduino-audio-tools )
+endif()
+
 # Build with helix 
 FetchContent_Declare(helix GIT_REPOSITORY "https://github.com/pschatzmann/arduino-libhelix.git" GIT_TAG main )
 FetchContent_GetProperties(helix)
@@ -20,7 +25,7 @@ if(NOT helix_POPULATED)
 endif()
 
 # build sketch as executable
-add_executable (mp3-helix mp3-helix.cpp ../main.cpp)
+add_executable (mp3-helix mp3-helix.cpp ../../main.cpp)
 # set preprocessor defines
 target_compile_definitions(mp3-helix PUBLIC -DARDUINO -DEXIT_ON_STOP -DUSE_HELIX -DUSE_PORTAUDIO  -DIS_DESKTOP)
 
