stk desktop example

--- a/examples/examples-desktop/generator/CMakeLists.txt
+++ b/examples/examples-desktop/generator/CMakeLists.txt
@@ -22,7 +22,7 @@ target_compile_definitions(arduino_emulator PUBLIC -DDEFINE_MAIN)
 target_compile_definitions(generator PUBLIC -DARDUINO -DIS_DESKTOP -DEXIT_ON_STOP)
 
 # OS/X might need this setting for core audio
-#target_compile_definitions(portaudio PUBLIC -DPA_USE_COREAUDIO=1)
+target_compile_options(portaudio PRIVATE -Wno-deprecated)
 
 # specify libraries
 target_link_libraries(generator portaudio_static arduino_emulator arduino-audio-tools)
