--- a/examples/examples-desktop/generator/CMakeLists.txt
+++ b/examples/examples-desktop/generator/CMakeLists.txt
@@ -8,6 +8,7 @@ set (DCMAKE_CXX_FLAGS "-Werror")
 include(FetchContent)
 option(BUILD_SHARED_LIBS "Build using shared libraries" OFF)
 
+
 # Build with arduino-audio-tools
 if(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
     add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../../.. ${CMAKE_CURRENT_BINARY_DIR}/arduino-audio-tools )
@@ -21,9 +22,6 @@ add_executable (generator generator.ino)
 target_compile_definitions(arduino_emulator PUBLIC -DDEFINE_MAIN)
 target_compile_definitions(generator PUBLIC -DARDUINO -DIS_DESKTOP -DEXIT_ON_STOP)
 
-# OS/X might need this setting for core audio
-target_compile_options(portaudio PRIVATE -Wno-deprecated)
-
 # specify libraries
-target_link_libraries(generator portaudio_static arduino_emulator arduino-audio-tools)
+target_link_libraries(generator portaudio arduino_emulator arduino-audio-tools)
 
