--- a/cmake-tests/codec/mp3-mad/CMakeLists.txt
+++ b/cmake-tests/codec/mp3-mad/CMakeLists.txt
@@ -24,7 +24,7 @@ endif()
 # build sketch as executabl
 add_executable (mp3-mad mp3-mad.cpp ../../main.cpp)
 # set preprocessor defines
-target_compile_definitions(mp3-mad PUBLIC -DARDUINO -DEXIT_ON_STOP -DUSE_MAD -DUSE_PORTAUDIO -DIS_DESKTOP )
+target_compile_definitions(mp3-mad PUBLIC -DARDUINO -DEXIT_ON_STOP -DUSE_PORTAUDIO -DIS_DESKTOP )
 
 # specify libraries
 target_link_libraries(mp3-mad portaudio arduino_emulator arduino_libmad arduino-audio-tools )
