--- a/cmake-tests/codec/aac-helix/CMakeLists.txt
+++ b/cmake-tests/codec/aac-helix/CMakeLists.txt
@@ -27,7 +27,7 @@ endif()
 add_executable (aac-helix aac-helix.cpp ../../main.cpp)
 
 # set preprocessor defines
-target_compile_definitions(aac-helix PUBLIC -DARDUINO -DEXIT_ON_STOP -DUSE_HELIX -DUSE_PORTAUDIO -DIS_DESKTOP)
+target_compile_definitions(aac-helix PUBLIC -DARDUINO -DEXIT_ON_STOP -DUSE_PORTAUDIO -DIS_DESKTOP)
 
 # OS/X might need this setting for core audio
 #target_compile_definitions(portaudio PUBLIC -DPA_USE_COREAUDIO=1)
