--- a/cmake-tests/codec/mp3-lame/CMakeLists.txt
+++ b/cmake-tests/codec/mp3-lame/CMakeLists.txt
@@ -27,7 +27,7 @@ endif()
 # build sketch as executable
 add_executable (mp3-lame mp3-lame.cpp ../../main.cpp)
 # set preprocessor defines
-target_compile_definitions(mp3-lame PUBLIC -DARDUINO -DEXIT_ON_STOP -DUSE_LAME -DUSE_PORTAUDIO -DIS_DESKTOP)
+target_compile_definitions(mp3-lame PUBLIC -DARDUINO -DEXIT_ON_STOP -DUSE_PORTAUDIO -DIS_DESKTOP)
 
 # specify libraries
 target_link_libraries(mp3-lame portaudio arduino_emulator arduino_liblame arduino-audio-tools)
