ESP32 tests for all esp32 architectures

--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@ local.properties
 .loadpath
 debug.cfg
 debug_custom.json
-esp32.svd
+esp32*.svd
 
 # External tool builders
 .externalToolBuilders/
