--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,8 +10,9 @@ include(FetchContent)
 
 add_library(arduino-audio-tools INTERFACE)
 
+option(ADD_PORTAUDIO "Add Portaudio Library" ON)
+option(ADD_ARDUINO_EMULATOR "Add Arduino Emulator Library" ON)
 #option(BUILD_TESTS "Build all tests automatically" OFF)
-option(ADD_STD_LIB "Add Standard Desktop Libraries" ON)
 
 
 # make include directory available to calling projects 
@@ -24,9 +25,8 @@ install(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/src/" # source directory
     PATTERN "*.h" # select header files
 )
 
-# Add basic libraries necessary for desktop build
-if (ADD_STD_LIB)
-
+if (ADD_PORTAUDIO)
+    # Add Portaduio for desktop build
     FetchContent_Declare(portaudio GIT_REPOSITORY "https://github.com/PortAudio/portaudio.git" GIT_TAG v19.7.0 )
     FetchContent_GetProperties(portaudio)
     if(NOT portaudio_POPULATED)
@@ -34,7 +34,9 @@ if (ADD_STD_LIB)
         add_subdirectory(${portaudio_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR}/portaudio)
     endif()
     target_compile_options(portaudio PUBLIC -Wno-deprecated-declarations)
+endif()
 
+if (ADD_ARDUINO_EMULATOR)
     # Build with Linux Arduino Emulator
     FetchContent_Declare(arduino_emulator GIT_REPOSITORY "https://github.com/pschatzmann/Arduino-Emulator.git" GIT_TAG main )
     FetchContent_GetProperties(arduino_emulator)
@@ -42,5 +44,4 @@ if (ADD_STD_LIB)
         FetchContent_Populate(arduino_emulator)
         add_subdirectory(${arduino_emulator_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR}/emulator)
     endif()
-
 endif()
