--- a/cmake-tests/codec/container-avi/CMakeLists.txt
+++ b/cmake-tests/codec/container-avi/CMakeLists.txt
@@ -15,17 +15,22 @@ if(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
     add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../../.. ${CMAKE_CURRENT_BINARY_DIR}/arduino-audio-tools )
 endif()
 
+# Build with helix 
+# FetchContent_Declare(helix GIT_REPOSITORY "https://github.com/pschatzmann/arduino-libhelix.git" GIT_TAG main )
+# FetchContent_GetProperties(helix)
+# if(NOT helix_POPULATED)
+#     FetchContent_Populate(helix)
+#     add_subdirectory(${helix_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR}/helix)
+# endif()
+
 
 # build sketch as executable
 add_executable (container-avi container-avi.cpp)
 
 # set preprocessor defines
-target_compile_definitions(container-avi PUBLIC -DEXIT_ON_STOP -DUSE_PORTAUDIO -DIS_MIN_DESKTOP)
+target_compile_definitions(container-avi PUBLIC -DEXIT_ON_STOP -DUSE_PORTAUDIO -DIS_MIN_DESKTOP -DHELIX_PRINT)
 target_include_directories(container-avi PRIVATE "${arduino_emulator_SOURCE_DIR}/ArduinoCore-Linux/libraries/SdFat" )
 
-# OS/X might need this setting for core audio
-#target_compile_definitions(portaudio PUBLIC -DPA_USE_COREAUDIO=1)
-
 # specify libraries
-target_link_libraries(container-avi portaudio arduino-audio-tools)
+target_link_libraries(container-avi portaudio arduino_helix arduino-audio-tools)
 
