--- a/library.properties
+++ b/library.properties
@@ -1,7 +1,7 @@
 name=audio-tools
-version=0.9.5
+version=0.9.6
 author=Phil Schatzmann
-maintainer=Phil Schatzmann <phil.schatzmann@gmail.com>
+maintainer=Phil Schatzmann
 sentence=Some useful audio processing classes
 paragraph=Arduino Audio Tools (Music Player, Music Recorder supporting I2S, Microphones, DAC, ADC, A2DP, Url), MP3 Player, AAC Player
 category=Signal Input/Output
