--- a/tests-cmake/hls/CMakeLists.txt
+++ b/tests-cmake/hls/CMakeLists.txt
@@ -9,12 +9,12 @@ set (DCMAKE_CXX_FLAGS "-Werror")
 include(FetchContent)
 
 # Deactivate Emulator and Portaudio
-set(ADD_ARDUINO_EMULATOR OFF CACHE BOOL "Add Arduino Emulator Library") 
+set(ADD_ARDUINO_EMULATOR ON CACHE BOOL "Add Arduino Emulator Library") 
 set(ADD_PORTAUDIO OFF CACHE BOOL "Add Portaudio Library") 
 
 # Build with arduino-audio-tools
 if(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
-    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../../.. ${CMAKE_CURRENT_BINARY_DIR}/arduino-audio-tools )
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../.. ${CMAKE_CURRENT_BINARY_DIR}/arduino-audio-tools )
 endif()
 
 # Build with tms
@@ -36,13 +36,13 @@ endif()
 
 # build sketch as executable
 set_source_files_properties(hls.ino PROPERTIES LANGUAGE CXX)
-add_executable (hls hls.ino)
+add_executable (hls hls.cpp ../main.cpp )
 
 # set preprocessor defines
-target_compile_definitions(hls PUBLIC -DIS_MIN_DESKTOP -DEXIT_ON_STOP -DHELIX_PRINT)
+target_compile_definitions(hls PUBLIC -DARDUINO -DIS_DESKTOP -DEXIT_ON_STOP -DHELIX_PRINT)
 
 # specify libraries
-target_link_libraries(hls arduino-audio-tools tsdemux arduino_helix)
+target_link_libraries(hls arduino-audio-tools arduino_emulator tsdemux arduino_helix portaudio)
 
 
 
