--- a/tests-cmake/codec/hls-cat/CMakeLists.txt
+++ b/tests-cmake/codec/hls-cat/CMakeLists.txt
@@ -2,7 +2,7 @@
 cmake_minimum_required(VERSION 3.20)
 
 # set the project name
-project(hls)
+project(hls-cat)
 set (CMAKE_CXX_STANDARD 11)
 set (DCMAKE_CXX_FLAGS "-Werror")
 
@@ -14,7 +14,7 @@ set(ADD_PORTAUDIO ON CACHE BOOL "Add Portaudio Library")
 
 # Build with arduino-audio-tools
 if(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../.. ${CMAKE_CURRENT_BINARY_DIR}/arduino-audio-tools )
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../../.. ${CMAKE_CURRENT_BINARY_DIR}/arduino-audio-tools )
 endif()
 
 # Build with tms
@@ -35,14 +35,14 @@ endif()
 
 
 # build sketch as executable
-set_source_files_properties(hls.ino PROPERTIES LANGUAGE CXX)
-add_executable (hls hls.cpp ../main.cpp )
+set_source_files_properties(hls-cat.ino PROPERTIES LANGUAGE CXX)
+add_executable (hls-cat hls-cat.cpp ../../main.cpp )
 
 # set preprocessor defines
-target_compile_definitions(hls PUBLIC -DARDUINO -DIS_DESKTOP -DEXIT_ON_STOP -DHELIX_PRINT)
+target_compile_definitions(hls-cat PUBLIC -DARDUINO -DIS_DESKTOP -DEXIT_ON_STOP -DHELIX_PRINT)
 
 # specify libraries
-target_link_libraries(hls arduino-audio-tools arduino_emulator tsdemux arduino_helix portaudio)
+target_link_libraries(hls-cat arduino-audio-tools arduino_emulator tsdemux arduino_helix portaudio)
 
 
 
